chore : Update 2 hello-world.html
Menambahkan pada baris ke 4 yaitu h2 dengan tulisan "Ini contoh ukuran h2"

--- a/hello-world.html
+++ b/hello-world.html
@@ -1,5 +1,6 @@
 <html>
       <body>
             Ini web site hasil belajar saya selama 5 menit lho ...
+            <h2>Ini contoh ukuran h2</h2>
       </body>
 </html>
